lib_LTLIBRARIES = libuspe_tproxy.la libuspe_TPROXY.la
libuspe_tproxy_la_SOURCES = uspe_mt_tproxy.c
libuspe_TPROXY_la_SOURCES = uspe_act_TPROXY.c

libuspe_TPROXY_la_CFLAGS = -I../include -I..
libuspe_tproxy_la_CFLAGS = -I../include -I..

libuspe_TPROXY_la_LDFLAGS = -version-info 1:0:1
libuspe_tproxy_la_LDFLAGS = -version-info 1:0:1
